--- a/pom.xml
+++ b/pom.xml
@@ -126,15 +126,9 @@
             **/test/resources/**/*.jar
             **/test-classes/media/**/*
         </sonar.exclusions>
-        <sonar.coverage.exclusions>
-            **/test/java/**/*
-        </sonar.coverage.exclusions>
-        <sonar.java.binaries>
-            **/target/classes/**/*
-        </sonar.java.binaries>
-        <sonar.java.libraries>
-            **/target/dependency/*.jar
-        </sonar.java.libraries>
+        <sonar.coverage.exclusions>**/test/java/**/*</sonar.coverage.exclusions>
+        <sonar.java.binaries>**/target/classes/**/*</sonar.java.binaries>
+        <sonar.java.libraries>**/target/dependency/*.jar</sonar.java.libraries>
 
     </properties>
 
