--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
             **/test-classes/media/**/*
         </sonar.exclusions>
         <sonar.coverage.exclusions>**/test/java/**/*</sonar.coverage.exclusions>
-        <sonar.java.binaries>**/target/classes/**/*</sonar.java.binaries>
+        <sonar.java.binaries>target/classes/</sonar.java.binaries>
         <sonar.java.libraries>**/target/dependency/*.jar</sonar.java.libraries>
 
     </properties>
