--- a/pom.xml
+++ b/pom.xml
@@ -118,14 +118,7 @@
         <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
         <sonar.projectName>Cherry Base</sonar.projectName>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.exclusions>
-            **/resources/media/**/*
-            **/target/site/**/*
-            **/target/classes/media/**/*
-            **/apidocs/**/*
-            **/test/resources/**/*.jar
-            **/test-classes/media/**/*
-        </sonar.exclusions>
+        <sonar.exclusions>**/resources/media/**/*,**/target/site/**/*,**/target/classes/media/**/*,**/apidocs/**/*,**/test/resources/**/*.jar,**/test-classes/media/**/*</sonar.exclusions>
         <sonar.coverage.exclusions>**/test/java/**/*</sonar.coverage.exclusions>
         <sonar.java.binaries>target/classes/</sonar.java.binaries>
         <sonar.java.libraries>**/target/dependency/*.jar</sonar.java.libraries>
