--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,41 +103,21 @@ jobs:
                 "password": "${{ secrets.READ_MAVEN_REGISTRY_GITHUB_TOKEN }}"
             }]
 
-      - name: Analyze with SonarCloud
-        run: mvn -B dependency:copy-dependencies verify sonar:sonar -f pom.xml -Pjava.17
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#      - name: Analyze with SonarCloud
+#        run: mvn -B dependency:copy-dependencies verify sonar:sonar -f pom.xml -Pjava.17
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       # Triggering SonarQube analysis as results of it are required by Quality Gate check.
       - name: Static Code Analysis
-        run: mvn -B clean verify dependency:copy-dependencies sonar:sonar -f pom.xml -Pjava.17
+        run: mvn -B clean dependency:copy-dependencies verify sonar:sonar -f pom.xml -Pjava.17
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-      # Quality Gate status.
-      - name: Sonar Quality Gate
-        id: sonarqube-quality-gate-check
-        uses: sonarsource/sonarqube-quality-gate-action@master
-        # Force to fail step after specific time.
-        timeout-minutes: 5
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #OPTIONAL
-
-#      - name: Sonar Scan
-#        uses: sonarsource/sonarqube-scan-action@master
-#        with:
-#          args: >
-#            -Dsonar.organization=hemajoo-commerce
-#            -Dsonar.projectKey=com.hemajoo.commerce:cherry-base
-#        env:
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-#
-#      # Check the Quality Gate status.
-#      - name: Sonar Quality Gate check
+#      # Quality Gate status.
+#      - name: Sonar Quality Gate
 #        id: sonarqube-quality-gate-check
 #        uses: sonarsource/sonarqube-quality-gate-action@master
 #        # Force to fail step after specific time.
